<resources>
    <string name="app_name">Howlr</string>

    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_forgot_password">Forgot password?</string>

    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_weather">Weather</string>

    <!--Message Page-->
    <string name="first_name_last_name">First Last</string>
    <string name="message_content">Message Content</string>
    <string name="time_of_last_message_sent_or_received">Time</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="base_url">https://howlr-server-side.herokuapp.com/</string>

    <string name="button_friends_delete">Delete</string>
    <string name="textplain_friends_request">Request</string>
    <string name="textplain_friends_search">Search</string>
    <string name="button_friends_accept_request">Accept</string>
    <string name="button_friends_decline_request">Decline</string>
    <string name="enterText_searchUsername">Enter An Username</string>
    <string name="dialog_friendsListRecycler_title">Delete Contact</string>
    <string name="dialog_friendsListRecycler_message">Your contact is deleted.</string>
    <string name="dialog_friendsListRecycler_confirm">Confirm</string>
    <string name="dialog_friendsListRecycler_cancel">Cancel</string>
    <string name="label_location">Current location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="keys_prefs_memberid">sharded pref memberid</string>

</resources>
