<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/background_color2">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="70dp">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/shibabone">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/display_name"
            android:layout_width="210dp"
            android:layout_height="26dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="26dp"
            android:layout_toRightOf="@id/profile_image"
            android:text="@string/first_name_last_name"
            android:textColor="@color/text_color"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/message_time"
            android:layout_width="60dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginRight="15dp"
            android:text="@string/time_of_last_message_sent_or_received"
            android:textAlignment="textEnd"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck">

        </TextView>

        <TextView
            android:id="@+id/message_content"
            android:layout_width="210dp"
            android:layout_height="18dp"
            android:layout_below="@id/display_name"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/profile_image"
            android:text="@string/message_content"
            android:textColor="@color/text_color"
            android:textSize="12sp">

        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/accent_color_light" />

    </RelativeLayout>

</RelativeLayout>